ensure padding stays tall on footer on mobile

--- a/_includes/footer/_footer.scss
+++ b/_includes/footer/_footer.scss
@@ -5,6 +5,9 @@
 
   &-container {
     @include container-element;
+    @include media($tablet) {
+      padding: 30px 15px;
+    }
     text-align: center;
   }
 }
